Proportional transform scale does not show small values #88346

Closed
opened 2021-05-17 11:46:35 +02:00 by george b · 5 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.31

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: ?

The problem
When activating Proportional Editing with objects sized in centimeter range, the influence circle is way to big, out of the screen and you need to scale it a lot with scroll .
This is very slow with high poly meshes (500k to 1M triangles).
Adjusting the proportional size for small areas just shows 0.00.
Users expect that default influence should be initialized relative to screen size or to object size.

Exact steps for others to reproduce the error

  • Enable Proportional Editing
  • After adjusting the Proportional size value for 1 cm or less of influence the onscreen value for proportional shows just 0.00.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.31 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: ? **The problem** When activating Proportional Editing with objects sized in centimeter range, the influence circle is way to big, out of the screen and you need to scale it a lot with scroll . This is very slow with high poly meshes (500k to 1M triangles). Adjusting the proportional size for small areas just shows 0.00. Users expect that default influence should be initialized relative to screen size or to object size. **Exact steps for others to reproduce the error** - Enable Proportional Editing - After adjusting the Proportional size value for 1 cm or less of influence the onscreen value for proportional shows just 0.00.
Author

Added subscriber: @GeRo

Added subscriber: @GeRo

Added subscribers: @mont29, @mano-wii

Added subscribers: @mont29, @mano-wii

This is not really a bug, but a design issue.
We could solve this by supporting units in the proportional editing value:

diff --git a/source/blender/editors/transform/transform_mode_translate.c b/source/blender/editors/transform/transform_mode_translate.c
index 3088f6a7776..8f7ef4ae4c2 100644
--- a/source/blender/editors/transform/transform_mode_translate.c
+++ b/source/blender/editors/transform/transform_mode_translate.c
@@ -201,8 +201,19 @@ static void headerTranslation(TransInfo *t, const float vec[3], char str[UI_MAX_
   }
 
   if (t->flag & T_PROP_EDIT_ALL) {
-    ofs += BLI_snprintf_rlen(
-        str + ofs, UI_MAX_DRAW_STR - ofs, TIP_(" Proportional size: %.2f"), t->prop_size);
+    ofs += BLI_strncpy_rlen(str + ofs, TIP_(" Proportional size: "), UI_MAX_DRAW_STR - ofs);
+    if (unit) {
+      ofs += BKE_unit_value_as_string(str + ofs,
+                                      UI_MAX_DRAW_STR - ofs,
+                                      t->prop_size * unit->scale_length,
+                                      4,
+                                      B_UNIT_LENGTH,
+                                      unit,
+                                      false);
+    }
+    else {
+      ofs += BLI_snprintf_rlen(str + ofs, UI_MAX_DRAW_STR - ofs, "%.2f", t->prop_size);
+    }
   }
 
   if (t->spacetype == SPACE_NODE) {

But with this change, we would lose translations of " Proportional size: %.2f".
I don't know to what extent such a change justifies losing some translations.


@mont29, (you know the translations area better), is there any way to get around the problem of losing translations? And is this really a problem?

This is not really a bug, but a design issue. We could solve this by supporting units in the proportional editing value: ``` diff --git a/source/blender/editors/transform/transform_mode_translate.c b/source/blender/editors/transform/transform_mode_translate.c index 3088f6a7776..8f7ef4ae4c2 100644 --- a/source/blender/editors/transform/transform_mode_translate.c +++ b/source/blender/editors/transform/transform_mode_translate.c @@ -201,8 +201,19 @@ static void headerTranslation(TransInfo *t, const float vec[3], char str[UI_MAX_ } if (t->flag & T_PROP_EDIT_ALL) { - ofs += BLI_snprintf_rlen( - str + ofs, UI_MAX_DRAW_STR - ofs, TIP_(" Proportional size: %.2f"), t->prop_size); + ofs += BLI_strncpy_rlen(str + ofs, TIP_(" Proportional size: "), UI_MAX_DRAW_STR - ofs); + if (unit) { + ofs += BKE_unit_value_as_string(str + ofs, + UI_MAX_DRAW_STR - ofs, + t->prop_size * unit->scale_length, + 4, + B_UNIT_LENGTH, + unit, + false); + } + else { + ofs += BLI_snprintf_rlen(str + ofs, UI_MAX_DRAW_STR - ofs, "%.2f", t->prop_size); + } } if (t->spacetype == SPACE_NODE) { ``` But with this change, we would lose translations of `" Proportional size: %.2f"`. I don't know to what extent such a change justifies losing some translations. --- @mont29, (you know the translations area better), is there any way to get around the problem of losing translations? And is this really a problem?

This issue was referenced by fa1868ae97

This issue was referenced by fa1868ae971c2dc50efb2f5dbf8ed2b2b6f08d08

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-06-22 22:18:05 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88346
No description provided.